--- a/roles/another_servers_role/handlers/main.yml
+++ b/roles/another_servers_role/handlers/main.yml
@@ -2,3 +2,8 @@
   service:
     name: some_service
     state: restarted
+    
+- name: restart_sshd
+  service: 
+    name: sshd
+    state: restarted
